--- a/templates/customer_home.html
+++ b/templates/customer_home.html
@@ -12,7 +12,7 @@
       <a href="/flights" class="dashboard-link">View My Flights</a>
       <!-- you can search for flights in the flights tab -->
       <a href="/purchase" class="dashboard-link">Purchase Tickets</a>
-      <a href="/cancel_trip" class="dashboard-link">Cancel Trip</a>
+      <a href="/cancel" class="dashboard-link">Cancel Trip</a>
       <a href="/ratings" class="dashboard-link">Rate and Comment on Flights</a>
       <a href="/spending" class="dashboard-link">Track My Spending</a>
       <a href="/logout" class="dashboard-link">Logout</a>
