--- a/templates/staff_home.html
+++ b/templates/staff_home.html
@@ -43,7 +43,7 @@
         <a href="/add-airport" class="button">Add Airport</a>
         <a href="/staff-ratings" class="button">View Flight Ratings</a>
         <a href="/schedule-maintenance" class="button">Schedule Maintenance</a>
-        <a href="/view-frequent-customers" class="button">View Frequent Customers</a>
+        <a href="/frequent-customers" class="button">View Frequent Customers</a>
         <a href="/revenue" class="button">View Earned Revenue</a>
         <a href="/logout-staff" class="button">Logout</a>
     </div>
