--- a/templates/customer_rating.html
+++ b/templates/customer_rating.html
@@ -74,7 +74,7 @@
     <label for="flightDate">Enter a date:</label>
     <input type="date" id="flightDate" name="flightDate">
 
-        <input type="submit" value="Register">
+        <input type="submit" value="Submit Rating">
     </form>
 </div>
   <form method="get" action="/">
