added flights-customer functionality

--- a/templates/customer_home.html
+++ b/templates/customer_home.html
@@ -9,7 +9,7 @@
 <body>
   <div class="dashboard-container">
       <h2>Customer Dashboard</h2>
-      <a href="/flights" class="dashboard-link">View My Flights</a>
+      <a href="/flights-customer" class="dashboard-link">View My Flights</a>
       <!-- you can search for flights in the flights tab -->
       <a href="/purchase" class="dashboard-link">Purchase Tickets</a>
       <a href="/cancel" class="dashboard-link">Cancel Trip</a>
