--- a/templates/change_status.html
+++ b/templates/change_status.html
@@ -7,7 +7,7 @@
 <body>
     <h1>Change Flight Status</h1>
     <form action="/change-flight-status" method="post">
-        <label for="flight_id">Flight ID:</label>
+        <label for="flight_id">Flight Number:</label>
         <input type="text" id="flight_id" name="flight_id">
         
         <label for="new_status">New Status:</label>
