--- a/templates/customer_home.html
+++ b/templates/customer_home.html
@@ -16,6 +16,7 @@
       <a href="/ratings" class="dashboard-link">Rate and Comment on Flights</a>
       <a href="/spending" class="dashboard-link">Track My Spending</a>
       <a href="/logout" class="dashboard-link">Logout</a>
+      <a href="/phone-number" class="dashboard-link">Add Phone Number</a>
   </div>
 </body>
 </html>
